[package]
name = "csgo-gsi-payload"
description = "Data structures for CSGO Game State Integration"
version = "0.1.0"
authors = ["Benjamin DIDIER <contact@aziks.aleeas.com>"]
repository = "https://github.com/Aziks0/csgo-gsi-payload"
license = "MPL-2.0"
categories = ["data-structures", "api-bindings"]
keywords = ["csgo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.149", features = ["derive"] }
serde_json = { version = "1.0.89" }
serde_with = "2.1.0"
